# routes/inventory.js
@@ -1,30 +1,27 @@
-'use strict';
-module.exports = function (app) {
-  const inv = require('../controllers/inventoryController.js');
-  const swaggerUi = require('swagger-ui-express');
-  const swaggerDocument = require('../swagger.json');
-  app.use(swaggerUi.serve);
+const inv = require('../controllers/inventoryController.js');
 
-  app
-    .route('/inventory')
-    .get(inv.list_all)
-    .post(inv.create_inv);
+const express = require('express');
+const router = express.Router();
 
-  app
-    .route('/inv/:invId')
-    .get(inv.read_inv)
-    .put(inv.update_inv)
-    .delete(inv.delete_inv);
-  
-  app.route('/api-docs').get(swaggerUi.setup(swaggerDocument));
+router.post('/inventory', (req, res) => {
+  res.status(201).send('This works');
+});
+router.get('/inventory', (req, res) => {
+  res.status(201).send('This works');
+});
+router.get('/inventory', (req, res) => {
+  res.status(201).send('This works');
+});
 
-  
-};
+router.delete('/inventory/:invId', (req, res) => {
+  res.sendStatus(204);
+});
 
+router.get('/inventory/:invId', (req, res) => {
+  res.status(201).send('This works');
+});
+router.put('/inventory/:invId', (req, res) => {
+  res.status(201).send('This works');
+});
 
-
-// POST /inventory/
-// GET /inventory
-// GET /inventory/{inventoryId}
-// PUT /inventory/{inventoryId}
-// DELETE inventory/{inventoryId}
+module.exports = router;
