# swagger.json
@@ -5,10 +5,10 @@
     "description": "Group 5 final project, Advanced todo list",
     "version": "1.0.0"
   },
-  "host": "cse-341-final-group5-todolist.onrender.com",
+  "host": "localhost:5000",
   "basePath": "/",
   "schemes": [
-    "https"
+    "http"
   ],
   "paths": {
     "/user/users": {
@@ -128,7 +128,7 @@
         }
       }
     },
-    "/inventory": {
+    "/inventory/inventory": {
       "get": {
         "description": "Get all inventory",
         "parameters": [],
@@ -179,7 +179,7 @@
         }
       }
     },
-    "/inventory/{inventoryId}": {
+    "/inventory/inventory/{inventoryId}": {
       "get": {
         "description": "Get 1 item based on inventoryId",
         "parameters": [
